{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "KeyboardInput_Grasps",
            "id": "b7c4bc5f-0fe7-4a74-8b9b-e834a084c51b",
            "actions": [
                {
                    "name": "GraspInput_Key0",
                    "type": "Button",
                    "id": "dab76d12-5f76-471a-9d4b-ddd9fe8cf501",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key1",
                    "type": "Button",
                    "id": "43ef2dc4-98b1-440d-a96f-f52ba46f0a23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key2",
                    "type": "Button",
                    "id": "1b5e126e-7ccc-4077-9519-bc48bc60fc9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key3",
                    "type": "Button",
                    "id": "8d4c6ce4-0f0d-4691-8727-94fb19416714",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key4",
                    "type": "Button",
                    "id": "060bc61e-a4f5-4863-ab70-944301404be7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key5",
                    "type": "Button",
                    "id": "bade6c75-938c-4a26-ace2-6b5563a4d0f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key6",
                    "type": "Button",
                    "id": "9528b38d-6b38-4e21-bda6-5e68284bd7fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key7",
                    "type": "Button",
                    "id": "deceeafc-4623-4d8f-819e-2cdb49c50234",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key8",
                    "type": "Button",
                    "id": "38d65e05-0a9b-4d92-a525-e6b2733ebb97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Key9",
                    "type": "Button",
                    "id": "a00af69d-30c3-4455-a89d-ac365fee6a23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GraspInput_Spacebar",
                    "type": "Button",
                    "id": "c185e25e-f1be-4b50-9ad8-6585de825be1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32d615f8-7dad-40b3-82c4-0d387a2bf05a",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fb3c11a-87ad-47bc-b84e-0f77780f6b12",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35852ae0-a400-4936-a865-39a4ea414575",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6023f3f7-3349-4c3f-ba38-4fcd91062122",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a3e9953-5e47-4e40-87d0-212f5f7ab34c",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39e35619-7d67-40f5-8301-54423c540904",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7c53ed0-8c03-42cb-a562-a39ca4cb8fd3",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a84439d3-1507-4e07-b136-ab2e9901ab09",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c68cbda6-7f9e-42e9-9da8-fe242e72e059",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7982cbe3-c3d0-44c5-95ca-88b87a943fcc",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Key9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07ce1bc2-2180-432f-960b-a23785aefc24",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "GraspInput_Spacebar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}